# hello-extendr

./: .Rbuildignore  .gitignore  Cargo.toml  DESCRIPTION  NAMESPACE
R/: lib.R
src/: Makevars  Makevars.win  entrypoint.c
src/hello/: Cargo.toml
src/hello/src/: lib.rs
