[package]
name = "hello"
version = "0.1.0"
authors = ["andy-thomason <andy@andythomason.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[dependencies]
# extendr-api = {git = "https://github.com/extendr/extendr", package = "extendr-api"}
extendr-api = { path = "/home/yutani/repo/extendr/extendr-api" }

[workspace]
